--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.parent {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.components {
+    margin: 30px 0px 0px 30px;
+    width: 50%;
+    border: 5px solid rgb(17, 72, 90);
+    align-content: center;
+    border-radius: 15px;
+    padding: 25px;
+    flex: 40%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .components Button{
+      background-color: lightblue;
+      display: flex;
   }
-}
+  
+  @media (max-width: 48em) {
+    .components {
+      margin: 30px 0px 0px 80px;
+      width: 100%;
+    }
+  }
+  
+  .container{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+  }
+  
