--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: Helvetica, sans-serif;
   background-color: white;
@@ -115,6 +115,26 @@ a {
   top: 0;
 }
 
+body {
+  font-weight: 200;
+  background-color: #337ab7;
+}
+
+header a,
+footer a {
+  color: white;
+}
+
+footer {
+  font-size: 0.8em;
+}
+
+.bg-primary,
+.btn-primary {
+  background-color: #377bb5 !important;
+  border: inherit;
+}
+
 @media (min-width: 48em) {
   .header li {
     float: left;
@@ -129,4 +149,4 @@ a {
   .header .menu-icon {
     display: none;
   }
-}
+} */
